--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A PMO Bot",
   "main": "index.js",
   "scripts": {
-    "test": "check"
+    "start": "node slackbutton_bot"
   },
   "keywords": [
     "pmo",
