--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 clientId=97745001425.136326415302
 clientSecret=d8471ee09f53ed4489661fd1f4c5173a
-PORT=3000
+port=3000
+https_proxy=http://proxy-sf.topgroup.com.ar:8080
