--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "engines": {
     "node": "6.9.5"
   },
-  "main": "slackbutton_bot.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node slackbutton_bot.js"
+    "start": "node server.js"
   },
   "keywords": [
     "pmo",
@@ -19,6 +19,7 @@
     "body-parser": "^1.16.0",
     "botkit": "^0.4.9",
     "ejs": "^2.5.5",
+    "express": "^4.14.1",
     "http-proxy": "^1.16.2",
     "mongodb": "^2.2.22",
     "monk": "^3.1.4",
